force-app/main/default/objects/custom_create317__c/custom_create317__c.object-meta.xml
<CustomObject>
    <label>Custom created object317</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects317</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>