force-app/main/default/objects/custom_create317__c/fields/custom_create_317field536__c.field-meta.xml
<CustomField>
    <fullName>custom_create_317field536__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 317field536</label>
    <type>Checkbox</type>
</CustomField>