force-app/main/default/objects/custom_create317__c/fields/custom_create_317field581__c.field-meta.xml
<CustomField>
    <fullName>custom_create_317field581__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 317field581</label>
    <type>Checkbox</type>
</CustomField>